Ajout et fix de la configuration, ajout du form base de données, getter et setter, structure clean de la configuration, ajout de la fonction export un schema et tables en .sql dans sqliteconverter et mysqlconverter, configuration de la base de donnée dans la configform.

--- a/application.ui
+++ b/application.ui
@@ -47,7 +47,7 @@
     <property name="title">
      <string>Edition</string>
     </property>
-    <addaction name="actionR_seau"/>
+    <addaction name="actionBddConfig"/>
     <addaction name="actionParam_tre"/>
    </widget>
    <addaction name="menuParam_tre"/>
@@ -120,7 +120,7 @@
     <string>Paramètres</string>
    </property>
   </action>
-  <action name="actionR_seau">
+  <action name="actionBddConfig">
    <property name="text">
     <string>Base de données</string>
    </property>
