--- a/application.ui
+++ b/application.ui
@@ -50,7 +50,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>25</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuParam_tre">
@@ -98,13 +98,16 @@
   </action>
   <action name="actionImporter">
    <property name="enabled">
-    <bool>false</bool>
+    <bool>true</bool>
    </property>
    <property name="text">
     <string>Importer</string>
    </property>
   </action>
   <action name="actionExporter_vers">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Exporter vers</string>
    </property>
