--- a/gestionparticipant.ui
+++ b/gestionparticipant.ui
@@ -166,6 +166,20 @@
             </property>
            </widget>
           </item>
+          <item row="10" column="0">
+           <widget class="QPushButton" name="razButton">
+            <property name="text">
+             <string>RAZ</string>
+            </property>
+           </widget>
+          </item>
+          <item row="9" column="0">
+           <widget class="QLabel" name="label_2">
+            <property name="text">
+             <string>Mode</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
