--- a/gestionparticipant.ui
+++ b/gestionparticipant.ui
@@ -137,23 +137,6 @@
           <item row="6" column="1">
            <widget class="QLineEdit" name="dateEdit"/>
           </item>
-          <item row="10" column="1">
-           <widget class="QPushButton" name="updateButton">
-            <property name="text">
-             <string>Mettre à jour</string>
-            </property>
-           </widget>
-          </item>
-          <item row="11" column="1">
-           <widget class="QPushButton" name="suprButton">
-            <property name="text">
-             <string>Supprimer</string>
-            </property>
-           </widget>
-          </item>
-          <item row="8" column="1">
-           <widget class="QLineEdit" name="rfidEdit"/>
-          </item>
           <item row="8" column="0">
            <widget class="QLabel" name="label">
             <property name="font">
@@ -166,17 +149,55 @@
             </property>
            </widget>
           </item>
-          <item row="10" column="0">
+          <item row="8" column="1">
+           <widget class="QLineEdit" name="rfidEdit"/>
+          </item>
+          <item row="12" column="0">
+           <widget class="QLabel" name="label_2">
+            <property name="text">
+             <string>Mode</string>
+            </property>
+           </widget>
+          </item>
+          <item row="13" column="0">
            <widget class="QPushButton" name="razButton">
             <property name="text">
              <string>RAZ</string>
             </property>
            </widget>
           </item>
-          <item row="9" column="0">
-           <widget class="QLabel" name="label_2">
+          <item row="10" column="0">
+           <widget class="QPushButton" name="pushButton">
             <property name="text">
-             <string>Mode</string>
+             <string>RAZ</string>
+            </property>
+           </widget>
+          </item>
+          <item row="9" column="0">
+           <widget class="QLabel" name="label_4">
+            <property name="text">
+             <string>Simulation</string>
+            </property>
+           </widget>
+          </item>
+          <item row="12" column="1">
+           <widget class="QPushButton" name="suprButton">
+            <property name="text">
+             <string>Supprimer</string>
+            </property>
+           </widget>
+          </item>
+          <item row="10" column="1">
+           <widget class="QPushButton" name="updateButton">
+            <property name="text">
+             <string>Mettre à jour</string>
+            </property>
+           </widget>
+          </item>
+          <item row="11" column="0">
+           <widget class="QPushButton" name="pushButton_2">
+            <property name="text">
+             <string>DATA</string>
             </property>
            </widget>
           </item>
